--- a/web/autostat.html
+++ b/web/autostat.html
@@ -7,6 +7,7 @@
     <script src="jquery.min.js"></script>
     <script src="midas.js"></script>
     <script src="mhttpd.js"></script>
+
     <style>
         table {
             float: left;
@@ -46,116 +47,119 @@
 
             // SCRIPTS ------------------------------------------------------
             set_script_table_section("Test",
-                [["CryoScriptTester", 'This test has parameter temperature of <span class="ScriptInput" name="modbvalue" data-odb-path="/Equipment/CryoScriptTester/Settings/temperature_K" data-odb-editable="1"></span> K'],
-                ["CryoScriptTester", 'A second line, now with a string "<span class="ScriptInput" name="modbvalue" data-odb-path="/Equipment/CryoScriptTester/Settings/test2" data-odb-editable="1"></span>" and a number: <span class="ScriptInput" name="modbvalue" data-odb-path="/Equipment/CryoScriptTester/Settings/test" data-odb-editable="1"></span>']]);
+                [["CryoScriptTester", 'This test has parameter temperature of <span name="modbvalue" data-odb-path="/Equipment/CryoScriptTester/Settings/temperature_K" data-odb-editable="1"></span> K'],
+                ["CryoScriptTester", 'A second line, now with a string "<span name="modbvalue" data-odb-path="/Equipment/CryoScriptTester/Settings/test2" data-odb-editable="1"></span>" and a number: <span name="modbvalue" data-odb-path="/Equipment/CryoScriptTester/Settings/test" data-odb-editable="1"></span>']]);
 
             setup_script_queue();
         }
 
-        var gStatusPIDInflight = false;
-        function update_pid_runstate(){
+        var gStatusInflight = false;
+        function update_runstate(){
 
             // don't make another request if the last request is still outstanding.
-            if(gStatusPIDInflight) return;
-            gStatusPIDInflight = true;
+            if(gStatusInflight) return;
+            gStatusInflight = true;
 
-            mjsonrpc_send_request([
-                    mjsonrpc_make_request("cm_exist",{"name":"fe_autostat_pid"}),
-                ]).then(function (rpc) {
+            // setup jobs
+            let req = new Array;
 
-                    // get all checkboxes
-                    let checkboxes = document.getElementsByClassName("AutoEnable");
+            req.push(mjsonrpc_make_request("cm_exist", {"name":"fe_autostat_pid"}));
+            req.push(mjsonrpc_make_request("cm_exist",{"name":"fe_autostat_script"}));
+            req.push(mjsonrpc_make_request("db_get_values",{"paths":["/Equipment/CryoScriptSequencer/Settings/Enabled"]}));
 
-                    // Check the status of the autostat frontend
-                    var prog_exist = rpc[0].result.status;
+            // make batch request
+            mjsonrpc_send_request(req).then(function(rpc){
 
-                    // fe running
-                    if(prog_exist == 1){
+                // PID program is running ------------------------------
 
-                        // set banner
-                        document.getElementById('updateStatus').innerHTML = "fe_autostat_pid program is running";
-                        document.getElementById('updateStatus').style.background = "#65f7ae";
+                // Check the status of the pid frontend
+                let checkboxes = document.getElementsByClassName("AutoEnable");
 
-                        // enable all checkboxes
-                        for(let i=0; i<checkboxes.length; i++){
-                            checkboxes[i].disabled = false;
-                        }
+                // fe running
+                if(rpc[0].result.status == 1){
 
-                    // fe not running
-                    }else{
+                    // set banner
+                    document.getElementById('updateStatus').innerHTML = "fe_autostat_pid program is running";
+                    document.getElementById('updateStatus').style.background = "#65f7ae";
 
-                        // set banner
-                        document.getElementById('updateStatus').innerHTML = "fe_autostat_pid program is NOT running";
-                        document.getElementById('updateStatus').style.background = "#f58282";
-
-                        // disable all checkboxes
-                        for(let i=0; i<checkboxes.length; i++){
-                            checkboxes[i].disabled = true;
-                        }
+                    // enable all checkboxes
+                    for(let i=0; i<checkboxes.length; i++){
+                        checkboxes[i].disabled = false;
                     }
 
-                    gStatusPIDInflight = false; // finished async routine
-                }).catch(function(error) {
-                    if (error.request) {
-                        var s = mjsonrpc_decode_error(error);
-                        console.log("mjsonrpc_error_alert: " + s);
-                    } else {
-                        console.log("mjsonroc_error_alert: " + error);
+                // fe not running
+                }else{
+
+                    // set banner
+                    document.getElementById('updateStatus').innerHTML = "fe_autostat_pid program is NOT running";
+                    document.getElementById('updateStatus').style.background = "#f58282";
+
+                    // disable all checkboxes
+                    for(let i=0; i<checkboxes.length; i++){
+                        checkboxes[i].disabled = true;
                     }
-                });
-        }
+                }
 
-        var gStatusScrInflight = false;
-        function update_scr_runstate(){
+                // SCRIPTS program is running -------------------------
 
-            // don't make another request if the last request is still outstanding.
-            if(gStatusScrInflight) return;
-            gStatusScrInflight = true;
+                let inputs = document.getElementsByClassName("ScriptInput");
 
-            mjsonrpc_send_request([
-                    mjsonrpc_make_request("cm_exist",{"name":"fe_autostat_script"}),
-                ]).then(function (rpc) {
+                // fe running
+                if(rpc[1].result.status == 1){
+                    // set banner
+                    document.getElementById('script_running').innerHTML = "fe_autostat_script program is running";
+                    document.getElementById('script_running').style.background = "#65f7ae";
 
-                    // get all input elements
-                    let inputs = document.getElementsByClassName("ScriptInput");
-
-                    // Check the status of the autostat frontend
-                    var prog_exist = rpc[0].result.status;
-
-                    // fe running
-                    if(prog_exist == 1){
-
-                        // set banner
-                        document.getElementById('script_running').innerHTML = "fe_autostat_script program is running";
-                        document.getElementById('script_running').style.background = "#65f7ae";
-
-                        // enable all inputs
-                        for(let i=0; i<inputs.length; i++){
-                            inputs[i].disabled = false;
-                        }
-
-                    // fe not running
-                    }else{
-
-                        // set banner
-                        document.getElementById('script_running').innerHTML = "fe_autostat_script program is NOT running";
-                        document.getElementById('script_running').style.background = "#f58282";
-
-                        // disable all inputs
-                        for(let i=0; i<inputs.length; i++){
-                            inputs[i].disabled = true;
-                        }
+                    // enable all inputs
+                    for(let i=0; i<inputs.length; i++){
+                        inputs[i].disabled = false;
                     }
 
-                    gStatusScrInflight = false; // finished async routine
-                }).catch(function(error) {
-                    if (error.request) {
-                        var s = mjsonrpc_decode_error(error);
-                        console.log("mjsonrpc_error_alert: " + s);
-                    } else {
-                        console.log("mjsonroc_error_alert: " + error);
+                // fe not running
+                }else{
+                    // set banner
+                    document.getElementById('script_running').innerHTML = "fe_autostat_script program is NOT running";
+                    document.getElementById('script_running').style.background = "#f58282";
+
+                    // disable all inputs
+                    for(let i=0; i<inputs.length; i++){
+                        inputs[i].disabled = true;
                     }
-                });
+                }
+
+                // SEQUENCER is enabled or not -------------------------------
+                if(rpc[2].result.data[0]){
+                    // set color of banner
+                    document.getElementById('queue_header').style.background = "#65f7ae";
+                    document.getElementById('queue_header').style.color = "#000000";
+
+                    // set start button text
+                    document.getElementById("startscript").innerHTML = 'Stop';
+                    let attr = document.getElementById("startscript").attributes.getNamedItem('data-odb-value');
+                    attr.nodeValue = false;
+                    document.getElementById("startscript").attributes.setNamedItem(attr);
+
+                } else {
+                    // set color of banner
+                    document.getElementById('queue_header').style.background = "#f58282";
+                    document.getElementById('queue_header').style.color = "#ffffff";
+
+                    // set start button text
+                    document.getElementById("startscript").innerHTML = 'Start';
+                    let attr = document.getElementById("startscript").attributes.getNamedItem('data-odb-value');
+                    attr.nodeValue = true;
+                    document.getElementById("startscript").attributes.setNamedItem(attr);
+                }
+
+                gStatusInflight = false; // finished async routine
+            }).catch(function(error) {
+                if (error.request) {
+                    var s = mjsonrpc_decode_error(error);
+                    console.log("mjsonrpc_error_alert: " + s);
+                } else {
+                    console.log("mjsonroc_error_alert: " + error);
+                }
+            });
         }
 
         function set_pid_table_section(section, equipments){
@@ -241,20 +245,62 @@
             // make section
             let row = table.insertRow();
             let cell = row.insertCell();
-            cell.outerHTML = `<th colspan="5" class="mtableheader">Queue</th>`;
+            cell.outerHTML = `<th colspan="5" class="mtableheader" id="queue_header">Queue</th>`;
 
+            // header and buttons
             row = table.insertRow();
             cell = row.insertCell();
-            cell.outerHTML = '<td align="center"><button class="ScriptInput" id="runscript">Run Queued Scripts</button></td>';
+
+
+            cell.outerHTML = '<td align="center"><button class="modbbutton mbutton" data-odb-path="/Equipment/CryoScriptSequencer/Settings/Enabled" data-odb-value="true" id="startscript" onclick="update_runstate()">Start</button></td>';
             cell = row.insertCell();
-            cell.outerHTML = '<td align="center"><button class="ScriptInput" id="stopscript">Stop Execution</button></td>';
+            cell.outerHTML = '<td align="center">Loop queue <span name="modbvalue" data-odb-path="/Equipment/CryoScriptSequencer/Settings/_nloops" data-odb-editable="1"></span> more times</td>';
             cell = row.insertCell();
             cell.outerHTML = '<td align="center"><button class="ScriptInput" id="clearscript">Clear All</button></td>';
+
+            gen_script_queue();
         }
+
+        function gen_script_queue(){
+            const table = document.getElementById("scripts_body");
+
+            // get queue size
+            mjsonrpc_db_get_values(['/Equipment/CryoScriptSequencer/Settings/_queue_length']).then(function(rpc) {
+                let queue_len = rpc.result.data[0];
+
+                // queue headers
+
+
+                // queue
+                for(let i=0; i<queue_len; i++){
+                    row = table.insertRow();
+
+                    // script name
+                    cell = row.insertCell();
+                    cell.innerHTML = `<div class="modbvalue" data-odb-editable="1" data-odb-path = "/Equipment/CryoScriptSequencer/Settings/_functions[${i}]"></div>`;
+
+                    // inputs
+                    cell = row.insertCell();
+                    cell.innerHTML = `<div class="modbvalue" data-odb-editable="1" data-odb-path = "/Equipment/CryoScriptSequencer/Settings/_inputs[${i}]"></div>`;
+
+                    // remove button
+                    cell = row.insertCell();
+                    cell.outerHTML = `<td align="center"><button class="ScriptInput" id="rmscript${i}">Remove</button></td>`;
+                }
+            }).catch(function(error) {
+                if (error.request) {
+                    let s = mjsonrpc_decode_error(error);
+                    console.log("mjsonrpc_error_alert: " + s);
+                } else {
+                    console.log("mjsonroc_error_alert: " + error);
+                }
+            });
+        }
+
     </script>
 </head>
 
-<body class="mcss" onload="setup();mhttpd_init('AutoStat');setInterval(update_pid_runstate,3000);update_pid_runstate();setInterval(update_scr_runstate,3000);update_scr_runstate();">
+<body class="mcss" onload="setup();mhttpd_init('AutoStat');setInterval(update_runstate,3000);update_runstate();">
 
     <!-- header and side navigation will be filled in mhttpd_start -->
     <div id="mheader"></div>
@@ -279,7 +325,7 @@
                     <tr style="height: 50px">
                         <th colspan="5" class="mtableheader"><h1>Scripts [THIS TABLE UNDER DEVELOPMENT]</h1></th>
                     </tr>
-                    <tr><td colspan="5" style="text-align: center"> <div id="script_running"> </div></td></tr>
+                    <tr><td colspan="5" style="text-align: center" id="script_running"></td></tr>
                 </thead>
                 <tbody id="scripts_body"></tbody>
             </table>
